--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -11,20 +11,25 @@
   z-index: -100;
   transform-style: preserve-3d;
   perspective: 1000px;
-  animation: animate 8s linear infinite;
+  animation: animate 10s linear infinite;
 
 }
 
 
-
-@keyframes animate{
-  0%{
-      background-position: 100px;
+@keyframes animate {
+  0% {
+    background-position: 100px;
   } 
-  100%{
-      background-position: 0px;
+  50% {
+    background-position: 0px;
   }
+  100% {
+    background-position: 100px;
+  }
+  animation-direction: alternate;
+  animation-iteration-count: infinite;
 }
+
 
 
 .header {
