--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,7 +1,3 @@
-.home{
-  perspective: 1000px;
-}
-
 .background_image_container {
   background-image: url('./../images/viktor-forgacs-Bvo2-SNi0rw-unsplash.jpg');
   background-size: cover;
@@ -69,9 +65,9 @@
 
 .topics_container{
   height: 100vh;
-  margin-left: 20%;
-  margin-right: 20%;
-  margin-top: 10%;
+  margin-left: 10%;
+  margin-right: 10%;
+  margin-top: 5%;
 }
 
 .about {
@@ -98,9 +94,11 @@
   justify-content: column;
   flex-direction: column;
   overflow: "hidden";
+  height: 80%;
 }
 
 .intro{
+  margin-top: 5%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -115,4 +113,54 @@
 
 .astronaut{
   z-index: 100;
+}
+
+
+/* .coffee{
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+
+} */
+
+.coffee_box {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+}
+
+.coffee_box{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.turn_coffee_code{
+  /* font-size: 22px;
+  text-align: center;
+  margin-left: -35px; */
+  margin-top: 13%;
+  text-align: center;
+  white-space: nowrap;
+  overflow: hidden;
+  font-size: 40px;
+  font-family: monospace;
+  border-right: 3px solid #fff;
+  animation: typing 3s steps(30, end), blink-caret .5s step-end infinite;
+}
+
+
+@keyframes typing {
+  from { width: 0 }
+  to { width: 100% }
+}
+
+@keyframes blink-caret {
+  from, to { border-color: transparent }
+  50% { border-color: #fff }
 }
