--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -1,14 +1,14 @@
-.background_image_container {
+.background_image_container{
   background-image: url('./../images/viktor-forgacs-Bvo2-SNi0rw-unsplash.jpg');
   background-size: cover;
   background-position: center center;
   background-attachment: fixed;
   position: relative;
-  z-index: 0;
+  z-index: -100;
   transform-style: preserve-3d;
   perspective: 1000px;
   animation: animate 10s linear infinite;
-  height: 100%;
+  height: 170%;
 }
 
 
@@ -63,13 +63,6 @@
 }
 
 
-/* .topics_container{
-  height: 100vh;
-  margin-left: 10%;
-  margin-right: 10%;
-  margin-top: 5%;
-} */
-
 .about {
   width: 100%;
   transform: translateZ(-100px);
@@ -95,24 +88,28 @@
   flex-direction: column;
   overflow: "hidden";
   height: 100vh;
-}
 
-.intro{
-  margin-top: 5%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
+  .intro{
+    margin-top: 5%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 
-.description {
-  margin-top: -70px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
+  .description {
+    margin-top: -70px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 
-.astronaut{
-  z-index: 100;
+  .comet_box {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
+  }
 }
 
 
@@ -125,25 +122,15 @@
 
 } */
 
-.coffee_box {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 1;
-}
 
-.coffee_box{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-}
+// .coffee_box{
+//   display: flex;
+//   justify-content: center;
+//   align-items: center;
+//   flex-direction: column;
+// }
 
 .turn_coffee_code{
-  /* font-size: 22px;
-  text-align: center;
-  margin-left: -35px; */
   margin-top: 13%;
   text-align: center;
   white-space: nowrap;
@@ -177,31 +164,79 @@
   justify-content: column;
   flex-direction: column;
   overflow: "hidden";
-  height: 80%;
-}
+  height: 200vh;
 
-.experiences_list{
-  display: grid;
-  list-style-type: none;
-  grid-template-columns: 1.2fr 1.2fr;
-  grid-gap: 5.5em;
-  margin-left: 10%;  
-  margin-right: 10%;
-  margin-top: 6%;
-}
+  .experiences_list{
+    display: grid;
+    list-style-type: none;
+    grid-template-columns: 1.2fr;
+    grid-gap: 5.5em;
+    margin-left: 25%;  
+    margin-right: 25%;
+    margin-top: 6%;
+  }
 
-.experience_01 {
-  background-color: purple;
-  padding: 10%;
-  border-radius: 20px;
-  z-index: 10;
-  position: relative;
-}
-
-.experience_02 {
-  background-color: green;
-  padding: 10%;
-  border-radius: 20px;
-  z-index: 10;
-  position: relative;
+  .experience_01 {
+    background-color: purple;
+    padding: 10%;
+    border-radius: 20px;
+    z-index: 100;
+  
+    h3 {
+      position: relative;
+      left: 50%;
+    }
+    span{
+      position: relative;
+      left: 35%;
+    }
+  
+    ul{
+      margin-top: 10%;
+    }
+    
+    ul li{
+      list-style: none;
+      margin-top: 2%;
+    }
+  
+    ul li::before {
+      content: attr(data-icon);
+      font-size: 1.25em;
+      margin-right: 1%;
+    }
+  }
+  
+  .experience_02 {
+    background-color: green;
+    padding: 10%;
+    border-radius: 20px;
+    z-index: 100;
+  
+    h3 {
+      position: relative;
+      left: 50%;
+    }
+  
+    span{
+      position: relative;
+      left: 35%;
+    }
+  
+    ul{
+      margin-top: 10%;
+    }
+    
+    ul li{
+      list-style: none;
+      margin-top: 2%;
+    }
+  
+    ul li::before {
+      content: attr(data-icon);
+      font-size: 1.25em;
+      margin-right: 1%;
+    }
+  }
+  
 }
