--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -276,7 +276,7 @@
   flex-direction: column;
   overflow: "hidden";
   height: 330vh;
-  background-color: aqua;
+  background-color: rgb(102, 77, 56);
   z-index: -100;
 
   .drip {
