--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -8,7 +8,9 @@
   transform-style: preserve-3d;
   perspective: 1000px;
   animation: animate 10s linear infinite;
-  height: 170%;
+  height: 170%;  
+  animation-direction: alternate;
+  animation-iteration-count: infinite;
 }
 
 
@@ -22,8 +24,6 @@
   100% {
     background-position: 100px;
   }
-  animation-direction: alternate;
-  animation-iteration-count: infinite;
 }
 
 
@@ -110,6 +110,25 @@
     left: 0;
     z-index: 1;
   }
+
+  .about_me{
+    margin-top: 500px;
+    height: 200vh;
+    font-size: 25px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+
+    .intro {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      text-align: center;
+    }
+  }
+
 }
 
 
@@ -154,7 +173,7 @@
 
 
 .experience{
-  margin-top: 60px;
+  margin-top: 800px;
   width: 100vw;
   transform: translateZ(-100px);
   perspective: 500px;
@@ -164,7 +183,8 @@
   justify-content: column;
   flex-direction: column;
   overflow: "hidden";
-  height: 330vh;
+  height: 500vh;
+
 
   .experiences_list{
     display: grid;
@@ -255,7 +275,7 @@
 
   .black_hole{
     position: relative;
-    top: 260px;
+    top: 700px;
     right: -300px;
     z-index: 100
   }
